# alexandria

./: .gitignore  ASPIRATIONS.md  CLAUDE.md  README.md  TODO.md  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/skills/coll-add-item-notes/: SKILL.md
.claude/skills/coll-author/: SKILL.md
.claude/skills/coll-backup/: SKILL.md
.claude/skills/coll-build-new-collection/: SKILL.md
.claude/skills/coll-digital/: SKILL.md
.claude/skills/coll-disable-version-control/: SKILL.md
.claude/skills/coll-enable-version-control/: SKILL.md
.claude/skills/coll-hardcover/: SKILL.md
.claude/skills/coll-import-collection/: SKILL.md
docs/: ASPIRATIONS.md
docs/collection/: book-shape.md
docs/guides/: anatomy-of-a-book.md  anatomy-of-an-item.md  backing-up-your-collection.md  fonts-and-typography.md  python-and-uv.md  setup-walkthrough.md  terminal-basics.md  troubleshooting.md  version-control-for-your-collection.md  working-with-scouts.md  yaml-basics.md
scripts/: update_collection.sh
skills/build-tracker/: SKILL.md
skills/new-author/: SKILL.md
skills/new-digital/: SKILL.md
skills/new-hardcover/: SKILL.md
skills/new-paperback/: SKILL.md
skills/new-physical/: SKILL.md
skills/new-scout/: SKILL.md
skills/take-notes/: SKILL.md
tests/: MANUAL_TESTING.md  test_wiki_generation.py  validate_repo.py
tools/: _wiki_style.css  _wiki_templates.py  backup_collection.py  collection-gitignore.template  commit_change.py  generate_wiki.py  get_default_collection.sh  init_version_control.py  managed-paths.yaml  update_collection.py
(+36 files in other folders)
